--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="keywords" content="" />
 		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<meta property="og:image" content="https://github.com/Pregoles/migmig/blob/master/images/J1.jpeg">
+		<meta property="og:image" content="https://github.com/lumieresurlesmigrations/dataviz/blob/master/images/J1.jpeg">
 		<meta property="og:image:type" content="image/jpeg">
 		<meta property="og:image:width" content="3523">
 		<meta property="og:image:height" content="2372">
@@ -63,13 +63,13 @@
 				<br>
 				<ul class="list">
 				<div id='buttons'>
-                   <li> <a href='https://www.facebook.com/sharer.php?u=https://pregoles.github.io/migmig&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target="_blank">
+                   <li> <a href='https://www.facebook.com/sharer.php?u=https://lumieresurlesmigrations.github.io/dataviz&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target="_blank">
                             <img width="50" height="50" src="images/facebook.png" alt="Facebook" />
 			   </a> </li>
-                    <li> <a href='https://www.linkedin.com/shareArticle?mini=true&url=http://pregoles.github.io/migmig&title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target='_blank'>
+                    <li> <a href='https://www.linkedin.com/shareArticle?mini=true&url=http://lumieresurlesmigrations.github.io/dataviz&title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target='_blank'>
                         <img width="50" height="50" src="images/linkedin.png" alt="LinkedIn" />
 			    </a> </li>
-                    <li> <a href="https://twitter.com/share?url=https://pregoles.github.io/migmig&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees" target="_blank">
+                    <li> <a href="https://twitter.com/share?url=https://lumieresurlesmigrations.github.io/dataviz&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees" target="_blank">
                         <img width="50" height="50" src="images/twitter.png" alt="Twitter" />
 			    </a> </li>
                 
@@ -347,8 +347,8 @@ illégaux.
 <div class="gen" style="width:100%;">
 
 <div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px  #d1e231 solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left " style="font-style: italic;">S’il y a 200 000 entrées légales d’immigrés en 
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px  #933d41  solid; margin-left:15px;  "/>
+  <div class="element2"> <p class="triangle-right left0 " style="font-style: italic;">S’il y a 200 000 entrées légales d’immigrés en 
 	  France par an, il y en a plus de 150 000 qui repartent. Nous avons aujourd’hui un solde migratoire qui doit être entre 
 	  50 000 et 70 000 personnes.
 </p> </div>
@@ -356,7 +356,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent;border:3px solid #d1e231;text-align: justify;text-justify: inter-word; "> <span style="color:green; margin-right:5px"> INFO </span> Le solde migratoire est estimé à 67000 personnes par l'INSEE en 2016. <span style="color:red;margin-left:5px;margin-right:5px"> INTOX </span>  Si l'on parle des immigrés, qui étaient au coeur du débat, et non de la population totale, le solde migratoire en France est en fait de 140 000 personnes. 
+<div class="devrait1" style="background-color:  transparent;border:3px solid #933d41;text-align: justify;text-justify: inter-word; "> <span style="color:green; margin-right:5px"> INFO </span> Le solde migratoire est estimé à 67000 personnes par l'INSEE en 2016. <span style="color:red;margin-left:5px;margin-right:5px"> INTOX </span>  Si l'on parle des immigrés, qui étaient au coeur du débat, et non de la population totale, le solde migratoire en France est en fait de 140 000 personnes. 
 </div>
 </div>
 	
@@ -365,15 +365,15 @@ illégaux.
 <div class="gen" style="width:100%;">
 
 <div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="melenchon.png" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">L’immigration est un exil forcé.
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="melenchon.png" alt="" style="border:2px #d1e231 solid; margin-left:15px;  "/>
+  <div class="element2"> <p class="triangle-right left" style="font-style: italic;">L’immigration est un exil forcé.
 
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Certes !
+<div class="devrait1" style="background-color:  transparent; border:3px solid #d1e231;text-align: justify;text-justify: inter-word;"> Certes !
 </div>
 </div>
 	</div>
