--- a/index.html
+++ b/index.html
@@ -330,15 +330,15 @@ illégaux.
 <div class="gen" style="width:100%;">
 
 <div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="macron.png" alt="" style="border:2px  #e48400 solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left2" style="font-style: italic;">Chaque année, environ 200 000 titres de séjours sont délivrés en France.
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="macron.png" alt="" style="border:2px  #d1e231  solid; margin-left:15px;  "/>
+  <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">Chaque année, environ 200 000 titres de séjours sont délivrés en France.
 
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #e48400;text-align: justify;text-justify: inter-word;"> 
+<div class="devrait1" style="background-color:  transparent; border:3px solid #d1e231;text-align: justify;text-justify: inter-word;"> 
 	<span style="color:green; margin-right:5px"> INFO </span> En 2016, 227 550 titres de séjour ont été attribuées dont notamment environ 39% ont été délivrés au motif du regroupement familial, 31% à des étudiants et 10% pour raisons économiques.
 </div>
 </div>
@@ -347,8 +347,8 @@ illégaux.
 <div class="gen" style="width:100%;">
 
 <div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px  #933d41  solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left0 " style="font-style: italic;">S’il y a 200 000 entrées légales d’immigrés en 
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px  #e48400  solid; margin-left:15px;  "/>
+  <div class="element2"> <p class="triangle-right left2 " style="font-style: italic;">S’il y a 200 000 entrées légales d’immigrés en 
 	  France par an, il y en a plus de 150 000 qui repartent. Nous avons aujourd’hui un solde migratoire qui doit être entre 
 	  50 000 et 70 000 personnes.
 </p> </div>
@@ -356,7 +356,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent;border:3px solid #933d41;text-align: justify;text-justify: inter-word; "> <span style="color:green; margin-right:5px"> INFO </span> Le solde migratoire est estimé à 67000 personnes par l'INSEE en 2016. <span style="color:red;margin-left:5px;margin-right:5px"> INTOX </span>  Si l'on parle des immigrés, qui étaient au coeur du débat, et non de la population totale, le solde migratoire en France est en fait de 140 000 personnes. 
+<div class="devrait1" style="background-color:  transparent;border:3px solid  #e48400;text-align: justify;text-justify: inter-word; "> <span style="color:green; margin-right:5px"> INFO </span> Le solde migratoire est estimé à 67000 personnes par l'INSEE en 2016. <span style="color:red;margin-left:5px;margin-right:5px"> INTOX </span>  Si l'on parle des immigrés, qui étaient au coeur du débat, et non de la population totale, le solde migratoire en France est en fait de 140 000 personnes. 
 </div>
 </div>
 	
@@ -365,15 +365,15 @@ illégaux.
 <div class="gen" style="width:100%;">
 
 <div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="melenchon.png" alt="" style="border:2px #d1e231 solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left" style="font-style: italic;">L’immigration est un exil forcé.
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="melenchon.png" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
+  <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">L’immigration est un exil forcé.
 
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #d1e231;text-align: justify;text-justify: inter-word;"> Certes !
+<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Certes !
 </div>
 </div>
 	</div>
