--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ illégaux.
 </div>
 </div>
 
-<div class="gen" style="width:100%;">
+<div class="gen" style="width:100%; margin-top:2em;  margin-bottom:2em;">
 
 <div class="roundedImage"> 
     <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px #009688 solid; margin-left:15px; "/>
@@ -327,7 +327,7 @@ illégaux.
 		
 <!-- Macron -->
 
-<div class="gen" style="width:100%;">
+<div class="gen" style="width:100%;margin-top:2em;  margin-bottom:2em;">
 
 <div class="roundedImage" > 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="macron.png" alt="" style="border:2px  #d1e231  solid; margin-left:15px;  "/>
@@ -344,7 +344,7 @@ illégaux.
 </div>
 	
 <!-- Hamon -->
-<div class="gen" style="width:100%;">
+<div class="gen" style="width:100%;margin-top:2em;  margin-bottom:2em;">
 
 <div class="roundedImage" > 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px  #e48400  solid; margin-left:15px;  "/>
