--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ illégaux.
 
 <div class="roundedImage" > 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="macron.png" alt="" style="border:2px  #d1e231  solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">Chaque année, environ 200 000 titres de séjours sont délivrés en France.
+  <div class="element2"> <p class="triangle-right left" style="font-style: italic;">Chaque année, environ 200 000 titres de séjours sont délivrés en France.
 
 </p> </div>
 
