--- a/index.html
+++ b/index.html
@@ -622,7 +622,10 @@ $(document).ready(function(){
        "children": [{
          "name": "Techfugees",
        "address":"https://techfugees.com/", 
-         "note": "Big data, hackatons et tech pour trouver des solutions d’aide aux réfugiés."
+         "note": "Big data, hackatons et tech pour trouver des solutions d’aide aux réfugiés."     
+       },{"name": "Ideas Box",
+       "address":"https://www.ideas-box.org/index.php/fr", 
+         "note": "Bibliothèque Sans Frontière a créé une médiathèque en kit standardisée, facilement transportable et déployable sur le terrain."
        },{
          "name": "Clouds over Sidra",
          "address": "https://with.in/watch/clouds-over-sidra/", 
