--- a/index.html
+++ b/index.html
@@ -684,8 +684,12 @@ $(document).ready(function(){
          "address": "http://data2.unhcr.org/en/situations/mediterranean", 
          "note": "Les chiffres actualisés des arrivées et disparitions en Méditerranée. "
        }, {
+         "name": "InfoMigrants",
+         "address": "http://fr.infomigrants.net/a-propos", 
+         "note":"Un site d’information vérifiée et fiable destiné aux migrants, où qu’ils se trouvent."
+       }, {
          "name": "Jungle News",
-         "address": "(http://jungle-news.arte.tv/fr/", 
+         "address": "http://jungle-news.arte.tv/fr/", 
          "note":"Jungle News : les dernières nouvelles de Calais."
        },  {
          "name": "The New Arrivals",
