--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ $(document).ready(function(){
 
 		<h1 class="dropmobil" style="color:#004953"> Les initiatives que nous avons retenues </h1>
 		
-		<div id="mainBubble" class="container" style="width:100%;">
+		<div id="mainBubble" class="container">
 		<svg class="mainBubbleSVG" width="1250" height="1200"><text id="bubbleItemNote" x="10" y="420" font-size="18" dominant-baseline="middle" alignment-baseline="middle" style="fill: black;"></text></svg></div>
 			<script script type="text/javascript"> 
 			   var w = window.innerWidth * 0.9 * 0.95;
