--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="keywords" content="" />
 		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<meta property="og:image" content="https://github.com/lumieresurlesmigrations/dataviz/blob/master/images/J1.jpeg">
+		<meta property="og:image" content="https://lumieresurlesmigrations.github.io/dataviz/images/J1.jpeg">
 		<meta property="og:image:type" content="image/jpeg">
 		<meta property="og:image:width" content="3523">
 		<meta property="og:image:height" content="2372">
@@ -66,7 +66,7 @@
                    <li> <a href='https://www.facebook.com/sharer.php?u=https://lumieresurlesmigrations.github.io/dataviz&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target="_blank">
                             <img width="50" height="50" src="images/facebook.png" alt="Facebook" />
 			   </a> </li>
-                    <li> <a href='https://www.linkedin.com/shareArticle?mini=true&url=http://lumieresurlesmigrations.github.io/dataviz&title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target='_blank'>
+                    <li> <a href='https://www.linkedin.com/shareArticle?mini=true&url=http://lumieresurlesmigrations.github.io/dataviz&title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Des%20infographies%20pour%20comprendre%20la%20crise%20des%20réfugiés%20en%20Europe' target='_blank'>
                         <img width="50" height="50" src="images/linkedin.png" alt="LinkedIn" />
 			    </a> </li>
                     <li> <a href="https://twitter.com/share?url=https://lumieresurlesmigrations.github.io/dataviz&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees" target="_blank">
