--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@ $(document).ready(function(){
 						</section>
 						<section class="4u$ 12u$(medium) 12u$(small)">
 							<h3>Qui sommes-nous ?</h3>
-							<p> Nous sommes quatre étudiants en dernière année à l'ENSAE ParisTech et à la Paris School of Economics.
+							<p> Nous sommes quatre étudiants en Master 2 à l'ENSAE ParisTech et à la Paris School of Economics.
 							Ce projet a été réalisé pour notre cours de visualisation de données à l'ENSAE.</p>
 							<ul class="icons">
 								<li>  <a href="https://www.linkedin.com/in/ali%C3%A9nor-anido-44b80991/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a></li>
