--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<meta name="keywords" content="" />
 		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<meta property="og:image" content="https://lumieresurlesmigrations.github.io/dataviz/images/J1.jpeg">
-		<meta property="og:image:type" content="image/jpeg">
+		<meta property="og:image" content="https://lumieresurlesmigrations.github.io/dataviz/images/petitpetit.jpeg">
+		<!-- <meta property="og:image:type" content="image/jpeg">
 		<meta property="og:image:width" content="3523">
-		<meta property="og:image:height" content="2372">
+		<meta property="og:image:height" content="2372"> -->
 		<meta property="og:title" content="La crise des réfugiés en Europe: des infographies pour comprendre" />
 		<meta property="og:description" content="Visualisation de données et infographies sur les migrations en Europe" />
 		
