--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 				
 				
 				<h2> Focus sur la demande d'asile </h2>
-			<div class="substitle"> Statut et durée du titre de séjour </div>
+			<div class="subtitle"> Statut et durée du titre de séjour </div>
 <div class="container" style="display:flex;justify-content:space-between;">
 	
 <div style="color:#004953;  width: 55%;text-align: justify;text-justify: inter-word;"> <br>
