--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 	</head>
 	<body class="landing">
 
-<img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="fences.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;display:none;"/>
+<img class="element" data-toggle="tooltip"  data-placement="left" title="Jean-Luc MélenchoEn" src="petitpetit.jpeg" alt="" style="border:2px #933d41 solid; margin-left:15px;display:none;"/>
+<img class="element" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="petitpetit.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;display:none;"/>
 	
 		<!-- Header -->
 			<header id="header">			
