--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	<body class="landing">
 
 <img class="element" data-toggle="tooltip"  data-placement="left" title="Jean-Luc MélenchoEn" src="petitpetit.jpeg" alt="" style="border:2px #933d41 solid; margin-left:15px;display:none;"/>
-<img class="element" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="petitpetit.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;display:none;"/>
+<!-- <img class="element" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="petitpetit.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;display:none;"/> -->
 	
 		<!-- Header -->
 			<header id="header">			
