--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8">
 		<title>Lumière sur les migrations</title>
@@ -479,7 +479,7 @@ illégaux.
 			<h2> Les demandeurs d'asile : d'où viennent-ils? </h2>
 <div> <font color="#24292E"> 10 principaux pays d'origine des demandeurs d'asile en France (premières demandes) </font> </div> <br>
 <div class="container" style="display:flex; flex-direction:row;flex-wrap:wrap; justify-content:space-around;">	
-	<div style="display:flex;flex-direction:column;"> <div style="color:black";> En 2014 </div>
+	<div style="display:flex;flex-direction:column"> <div style="color:black";> En 2014 </div>
 	
 <iframe id="datawrapper-chart-3ODbC" src="//datawrapper.dwcdn.net/3ODbC/4/"  frameborder="0" allowtransparency="true" scrolling="no" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen" style="width:150%;"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["3ODbC"]={},window.datawrapper["3ODbC"].embedDeltas={"100":306,"200":306,"300":306,"400":306,"500":306,"600":306,"700":306,"800":306,"900":306,"1000":306},window.datawrapper["3ODbC"].iframe=document.getElementById("datawrapper-chart-3ODbC"),window.datawrapper["3ODbC"].iframe.style.height=window.datawrapper["3ODbC"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["3ODbC"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("3ODbC"==b)window.datawrapper["3ODbC"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
 	</div>
@@ -1001,13 +1001,13 @@ $(document).ready(function(){
 			<div style="display:flex;flex-direction:column; text-align: justify">
 			</div>
 			<div style="color:#004953; text-align: justify;text-justify: inter-word;"> 
-			<ul>
-				<li><a href="http://campus-solidaire.strikingly.com"><b style="font-weight:bold ">Camp’us solidaire </b></a> : lancée par <b>Bastien Vallée (ENSAE 2018) </b> et trois étudiants de HEC (Agathe, Isabelle et François), cette association apolitique travaille en partenariat avec Fraternité en Irak et le Secours Catholique. Elle a recueilli 5200€ lors d’une campagne de crowdfunding solidaire en Octobre 2015. A long terme, Camp’us solidaire cherche à faire le lien entre les étudiants cherchant à agir concrètement et ceux qui ont besoin d’eux. </li>
+			
+			<p><a href="http://campus-solidaire.strikingly.com"><b style="font-weight:bold ">Camp’us solidaire </b></a> : lancée par <b>Bastien Vallée (ENSAE 2018) </b> et trois étudiants de HEC (Agathe, Isabelle et François), cette association apolitique travaille en partenariat avec Fraternité en Irak et le Secours Catholique. Elle a recueilli 5200€ lors d’une campagne de crowdfunding solidaire en Octobre 2015. A long terme, Camp’us solidaire cherche à faire le lien entre les étudiants cherchant à agir concrètement et ceux qui ont besoin d’eux. </p>
 			<!-- <li><a href ="https://www.ideas-box.org/index.php/fr"> Ideas Box de Bibliothèques Sans Frontières </a>est une médiathèque en kit standardisée, facilement transportable et déployable sur le terrain (Jordanie, Colombie, Ethiopie, la région des Grands Lacs... et aussi en France). Un dispositif robuste et autonome énergétiquement qui propose un contenu adapté aux besoins des populations, à leur langue et leur culture.
 				<b>Enguérand Acquérone (ENSAE 2018)</b> avait envoyé un mail-co en septembre 2015 pour inviter à voter pour le projet d’Ideas Box de Bibliothèque Sans Frontières, au Google Impact Challenge. Il a également fait son stage d’ouverture chez BSF.</li>
 			<br> -->
-			<li> <b><a href="https://www.ensae.org/global/gene/link.php?doc_id=1243&fg=1">Sebastião Salgado</a></b>  (ENSAE 1969) : le grand photographe d’origine brésilienne a parcouru plus de 100 pays pour exposer les grands conflits et crises humanitaires. Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. </li>	
-			</ul>
+			 <p><b><a href="https://www.ensae.org/global/gene/link.php?doc_id=1243&fg=1">Sebastião Salgado</a></b>  (ENSAE 1969) : le grand photographe d’origine brésilienne a parcouru plus de 100 pays pour exposer les grands conflits et crises humanitaires. Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. </p>
+			
 			</div>
 			</div>
 	</section>
