--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@ $(document).ready(function(){
 				 Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de 
 				 l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, 
 				 rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site.
-				 <a href="https://www.ensae.org/global/gene/link.php?doc_id=1243&fg=1">Découvrez son interview dans Variances</a>  </p>
+				 <a href="https://www.ensae.org/global/gene/link.php?doc_id=1243&fg=1">Découvrez son interview dans Variances</a>.  </p>
 			
 			</div>
 			</div>
