--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ illégaux.
 </div>
 
 <div class="devrait1" style="background-color:  transparent; border:3px solid #d1e231;text-align: justify;text-justify: inter-word;"> 
-	<span style="color:green; margin-right:5px"> INFO </span> En 2016, 227 550 titres de séjour ont été attribuées dont notamment environ 39% ont été délivrés au motif du regroupement familial, 31% à des étudiants et 10% pour raisons économiques.
+	<span style="color:green; margin-right:5px"> INFO </span> En 2016, 227 550 titres de séjour ont été attribuées dont notamment environ 39% ont été délivrés au titre du regroupement familial, 31% à des étudiants et 10% pour raisons économiques.
 </div>
 </div>
 	
