--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@ $(document).ready(function(){
        "children": [{
          "name": "Utopia56",
          "address": "http://www.utopia56.com/fr/user/register",
-         "note": "Aider 2h, 1 jour ou d’avantage dans un Centre d’Accueil et d’Orientation à Paris ou près de Calais."
+         "note": "Aider 2h, 1 jour ou d’avantage dans le centre humanitaire de Paris ou près de Calais."
        }, {
          "name": "Singa Calm",
          "address": "http://calm.singa.fr/", 
