--- a/index.html
+++ b/index.html
@@ -578,9 +578,9 @@ $(document).ready(function(){
        "name": "Accueil",
        "description": "S'occuper des hébergements d'urgence et temporaires des réfugiés et demandeurs d'asile.",
        "children": [{
-         "name": "Utopia56",
+         "name": "Utopia56", 
          "address": "http://www.utopia56.com/fr/user/register",
-         "note": "Aider 2h, 1 jour ou d’avantage dans le centre humanitaire de Paris ou près de Calais."
+         "note": "Aider 2h, 1 jour ou d’avantage dans le centre humanitaire de Paris, à Calais et partout où l'urgence l'exige."
        }, {
          "name": "Singa Calm",
          "address": "http://calm.singa.fr/", 
