--- a/index.html
+++ b/index.html
@@ -589,6 +589,10 @@ $(document).ready(function(){
          "name": "JRS",
          "address": "http://www.jrsfrance.org/welcome-en-france-refugie/",
          "note": "Jesuit Refugee Service, aller là où personne ne va. Héberger un demandeur d’asile pendant 4 à 6 semaines."
+       },    {
+         "name": "CPA",
+         "address": "http://www.cpafrance.fr/",
+         "note": "Comprendre pour Apprendre, une plateforme internet d'accès aux formations de français."
        }]
      }, {
        "name": "Emploi",
