--- a/index.html
+++ b/index.html
@@ -717,6 +717,10 @@ $(document).ready(function(){
          "name": "Arte Reportage",
          "address": "http://info.arte.tv/fr/refugies", 
          "note":"A travers 5 destinations, 20 regards d'artistes, la série multimédia d'ARTE Reportage raconte les camps de réfugiés."
+       },   {
+         "name": "Sursaut citoyen",
+         "address": "http://sursaut-citoyen.org/", 
+         "note":"Une carte collaborative qui recense 1000 initiatives citoyennes de solidarité avec les migrants."
        }]
      }]
    };
