--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@ $(document).ready(function(){
 			 <p>Le photographe  <b style="font-weight:bold ; color: #0F52BA" >Sebastião Salgado (ENSAE 1969)</b>  d’origine brésilienne a parcouru plus de 100 pays pour exposer les grands conflits et crises humanitaires. 
 				 Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de 
 				 l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, 
-				 rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site.
+				 rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. <a href="https://www.artsy.net/artist/sebastiao-salgado">Pour en savoir plus sur ses oeuvres.</a>
 				 <a href="https://www.ensae.org/global/gene/link.php?doc_id=1243&fg=1">Découvrez son interview dans Variances</a>.  </p>
 			
 			</div>
