--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@ $(document).ready(function(){
 			 <p>Le photographe  <b style="font-weight:bold ; color: #0F52BA" >Sebastião Salgado (ENSAE 1969)</b>  d’origine brésilienne a parcouru plus de 100 pays pour exposer les grands conflits et crises humanitaires. 
 				 Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de 
 				 l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, 
-				 rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. <a href="https://www.artsy.net/artist/sebastiao-salgado">Pour en savoir plus sur ses oeuvres.</a>
+				 rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. 
 				 <a href="https://www.ensae.org/global/gene/link.php?doc_id=1243&fg=1">Découvrez son interview dans Variances</a>.  </p>
 			
 			</div>
@@ -1061,6 +1061,8 @@ $(document).ready(function(){
 								production des chiffres et l’usage qui en est fait par les médias et les organisations internationales. <a href="https://drive.google.com/open?id=0B1Bvj2p8fyKoTXhvSERvaHFOZFU">"Combien de migrants?"</a> </p>
 							<p> Sur les déplacés internes : le rapport mondial 2016 de <a href="http://www.internal-displacement.org/globalreport2016/">
 	l’Observatoire des situations de déplacement interne (IDMC)</a> </p> 
+							<p> Sur les oeuvres de Sebastião Salgado : <a href="https://www.artsy.net/artist/sebastiao-salgado">Artsy.</a> </p>
+							
 						</section>
 						<section class="4u$ 12u$(medium) 12u$(small)">
 							<h3>Qui sommes-nous ?</h3>
